// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemFilter > can use a custom attribute as display name 1`] = `
"<div class="item-filter flex item-filter-users">
  <div class="oc-filter-chip flex">
    <oc-button-stub appearance="outline" colorrole="secondary" disabled="false" gapsize="none" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" nohover="false" id="oc-filter-chip-3" class="oc-filter-chip-button oc-pill py-1 text-xs rounded-full h-[26px] max-w-40 focus:z-90 transition-[gap] px-3"><span class="oc-icon box-content inline-block align-baseline [&amp;_svg]:block size-4 transform-[scale(0)] ease-out w-0 transition-all duration-250"><svg data-testid="inline-svg-stub" src="icons/check-fill.svg" transform-source="(svg) => {
      if (__props.accessibleLabel !== &quot;&quot;) {
        const title = document.createElement(&quot;title&quot;);
        title.setAttribute(&quot;id&quot;, svgTitleId.value);
        title.appendChild(document.createTextNode(__props.accessibleLabel));
        svg.insertBefore(title, svg.firstChild);
      };
      return svg;
    }" aria-hidden="true" focusable="false" class="size-4"></svg></span> <span class="truncate oc-filter-chip-label">Users</span>
      <!--v-if--> <span class="oc-icon box-content inline-block align-baseline [&amp;_svg]:block size-4 ml-1"><svg data-testid="inline-svg-stub" src="icons/arrow-down-s-line.svg" transform-source="(svg) => {
      if (__props.accessibleLabel !== &quot;&quot;) {
        const title = document.createElement(&quot;title&quot;);
        title.setAttribute(&quot;id&quot;, svgTitleId.value);
        title.appendChild(document.createTextNode(__props.accessibleLabel));
        svg.insertBefore(title, svg.firstChild);
      };
      return svg;
    }" aria-hidden="true" focusable="false" class="size-4"></svg></span>
    </oc-button-stub>
    <oc-drop-stub title="Users" closeonclick="false" dropid="oc-drop-4" mode="click" offset="5" paddingsize="small" position="bottom-start" toggle="#oc-filter-chip-3" enforcedroponmobile="false" class="oc-filter-chip-drop">
      <!--v-if-->
      <div>
        <ul class="oc-list item-filter-list">
          <li class="my-1">
            <oc-button-stub appearance="raw" colorrole="secondary" disabled="false" gapsize="medium" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" nohover="false" class="item-filter-list-item flex items-center w-full justify-between" data-test-value="Albert Einstein">
              <div class="flex items-center truncate">
                <!--v-if-->
                <div></div>
                <div class="truncate"></div>
              </div>
              <div class="flex">
                <!--v-if-->
              </div>
            </oc-button-stub>
          </li>
          <li class="my-1">
            <oc-button-stub appearance="raw" colorrole="secondary" disabled="false" gapsize="medium" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" nohover="false" class="item-filter-list-item flex items-center w-full justify-between" data-test-value="Marie Curie">
              <div class="flex items-center truncate">
                <!--v-if-->
                <div></div>
                <div class="truncate"></div>
              </div>
              <div class="flex">
                <!--v-if-->
              </div>
            </oc-button-stub>
          </li>
        </ul>
      </div>
    </oc-drop-stub>
    <!--v-if-->
  </div>
</div>"
`;

exports[`ItemFilter > renders all items 1`] = `
"<div class="item-filter flex item-filter-users">
  <div class="oc-filter-chip flex">
    <oc-button-stub appearance="outline" colorrole="secondary" disabled="false" gapsize="none" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" nohover="false" id="oc-filter-chip-1" class="oc-filter-chip-button oc-pill py-1 text-xs rounded-full h-[26px] max-w-40 focus:z-90 transition-[gap] px-3"><span class="oc-icon box-content inline-block align-baseline [&amp;_svg]:block size-4 transform-[scale(0)] ease-out w-0 transition-all duration-250"><svg data-testid="inline-svg-stub" src="icons/check-fill.svg" transform-source="(svg) => {
      if (__props.accessibleLabel !== &quot;&quot;) {
        const title = document.createElement(&quot;title&quot;);
        title.setAttribute(&quot;id&quot;, svgTitleId.value);
        title.appendChild(document.createTextNode(__props.accessibleLabel));
        svg.insertBefore(title, svg.firstChild);
      };
      return svg;
    }" aria-hidden="true" focusable="false" class="size-4"></svg></span> <span class="truncate oc-filter-chip-label">Users</span>
      <!--v-if--> <span class="oc-icon box-content inline-block align-baseline [&amp;_svg]:block size-4 ml-1"><svg data-testid="inline-svg-stub" src="icons/arrow-down-s-line.svg" transform-source="(svg) => {
      if (__props.accessibleLabel !== &quot;&quot;) {
        const title = document.createElement(&quot;title&quot;);
        title.setAttribute(&quot;id&quot;, svgTitleId.value);
        title.appendChild(document.createTextNode(__props.accessibleLabel));
        svg.insertBefore(title, svg.firstChild);
      };
      return svg;
    }" aria-hidden="true" focusable="false" class="size-4"></svg></span>
    </oc-button-stub>
    <oc-drop-stub title="Users" closeonclick="false" dropid="oc-drop-2" mode="click" offset="5" paddingsize="small" position="bottom-start" toggle="#oc-filter-chip-1" enforcedroponmobile="false" class="oc-filter-chip-drop">
      <!--v-if-->
      <div>
        <ul class="oc-list item-filter-list">
          <li class="my-1">
            <oc-button-stub appearance="raw" colorrole="secondary" disabled="false" gapsize="medium" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" nohover="false" class="item-filter-list-item flex items-center w-full justify-between" data-test-value="Albert Einstein">
              <div class="flex items-center truncate">
                <!--v-if-->
                <div></div>
                <div class="truncate"></div>
              </div>
              <div class="flex">
                <!--v-if-->
              </div>
            </oc-button-stub>
          </li>
          <li class="my-1">
            <oc-button-stub appearance="raw" colorrole="secondary" disabled="false" gapsize="medium" justifycontent="space-between" showspinner="false" size="medium" submit="button" type="button" nohover="false" class="item-filter-list-item flex items-center w-full justify-between" data-test-value="Marie Curie">
              <div class="flex items-center truncate">
                <!--v-if-->
                <div></div>
                <div class="truncate"></div>
              </div>
              <div class="flex">
                <!--v-if-->
              </div>
            </oc-button-stub>
          </li>
        </ul>
      </div>
    </oc-drop-stub>
    <!--v-if-->
  </div>
</div>"
`;
